syntax = "proto3";
package quasar.v1;

option go_package = "github.com/tehsphinx/quasar/pb";

import "v1/raft.proto";

message Command {
  oneof cmd {
    StoreValue store_value = 1;
    LoadValue load_value = 2;
    AppendEntriesRequest append_entries = 3;
    RequestVoteRequest request_vote = 4;
    InstallSnapshotRequest install_snapshot = 5;
    TimeoutNowRequest timeout_now = 6;
  }
}

message CommandResponse {
  oneof resp {
    StoreValueResponse store_value = 1;
    LoadValueResponse load_value = 2;
    AppendEntriesResponse append_entries = 3;
    RequestVoteResponse request_vote = 4;
    InstallSnapshotResponse install_snapshot = 5;
    TimeoutNowResponse timeout_now = 6;
  }

  // error message in case of error
  string error = 7;
}

message StoreValue {
  string key = 1;
  bytes data = 2;
}

message StoreValueResponse {
  uint64 uid = 1;
}

message LoadValue {
  string key = 1;
}

message LoadValueResponse {
  uint64 uid = 1;
  bytes data = 2;
}
